<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>

    <string name="notification_content">Loading Completed</string>
    <string name="notification_detail_button">Check the status</string>

    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">Downloading…</string>

    <string name="button_download_completed">Download Completed</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="header_img_desc">Header section with download image icon</string>

    <string name="desc_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="desc_udacity">LoadApp - Current repository by Udacity</string>
    <string name="desc_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="source_glide">Glide</string>
    <string name="source_retrofit">Retrofit</string>
    <string name="source_udacity">Udacity</string>

    <string name="failed_status">Failed</string>
    <string name="success_status">Success</string>

    <string name="alert_download_source">Please select a download source</string>
    <string name="detail_fileName">File Name</string>
    <string name="detail_downloadStatus">Download Status</string>
    <string name="btn_ok">OK</string>

</resources>
