<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main"
        >

        <!-- Header Image: With download icon -->
        <ImageView
            android:id="@+id/header_img"
            style="@style/header_download_img"
            android:contentDescription="@string/header_img_desc"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_download"
            />

        <!-- Radio Group -->
        <RadioGroup
            android:id="@+id/radio_group"
            style="@style/download_sources"
            app:layout_constraintEnd_toEndOf="@+id/custom_button"
            app:layout_constraintStart_toStartOf="@+id/custom_button"
            app:layout_constraintTop_toBottomOf="@+id/header_img"
            >

            <!-- Glide -->
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_glide"
                style="@style/options_item"
                android:text="@string/desc_glide"
                />

            <!-- Udacity (LoadApp) -->
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_load_app"
                style="@style/options_item"
                android:layout_marginVertical="@dimen/options_items_padding"
                android:text="@string/desc_udacity"
                />

            <!-- Retrofit -->
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_retrofit"
                style="@style/options_item"
                android:text="@string/desc_retrofit"
                />

        </RadioGroup>

        <!-- Custom LoadingButton -->
        <com.udacity.utils.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            app:backgroundButtonColor="@color/colorPrimaryDark"
            app:circleProgressColor="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:text="Download"
            />

        <!-- Guideline: 40% from the TOP -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            style="@style/main_guideline"
            app:layout_constraintGuide_percent="0.4"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
