<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <!-- Wrapper: MotionLayout -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/content_detail_scene"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail"
        >

        <!-- Label: File Name -->
        <TextView
            android:id="@+id/file_name_label"
            style="@style/detail_label"
            android:text="@string/detail_fileName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <!-- Desc:: Glide | Retrofit | Udacity -->
        <TextView
            android:id="@+id/file_name"
            style="@style/detail_desc"
            app:layout_constraintBaseline_toBaselineOf="@+id/file_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Retrofit"
            />

        <!-- Label: Download Status -->
        <TextView
            android:id="@+id/status_label"
            style="@style/detail_label"
            android:text="@string/detail_downloadStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name"
            />

        <!-- Description: Success | Failure -->
        <TextView
            android:id="@+id/status"
            style="@style/detail_desc"
            app:layout_constraintBaseline_toBaselineOf="@+id/status_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Success"
            />

        <!-- Button: OK -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            style="@style/detail_btn_ok"
            android:text="@string/btn_ok"
            app:cornerRadius="@dimen/btn_border_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
